--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,3 +1,35 @@
 <div class="front">
   BLAH BLAH BLAH
 </div>
+<div class="cars">
+
+  <div class="car"></div>
+  <div class="car"></div>
+  <div class="car"></div>
+  <div class="car"></div>
+  <div class="car"></div>
+  <div class="car"></div>
+  <div class="car"></div>
+
+</div>
+<div class="tools">
+  <div class="tool"></div>
+  <div class="tool"></div>
+  <div class="tool"></div>
+  <div class="tool"></div>
+</div>
+
+<div class="promise">
+
+</div>
+
+<div class="content">
+  <div class="fma3"></div>
+  <div class="fma3"></div>
+  <div class="fma3"></div>
+
+  <div class="fma2"></div>
+  <div class="fma2"></div>
+</div>
+
+<div class="backtotop"></div>
