--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -4,20 +4,28 @@
   background-color: white
 
 .frontlinks
-  position: absolute
+  height: 30px
+  width: 300px
+  position: relative
   font-size: 14px
   color: white
-  opacity: .8
-  top: 200px
-  right: 100px
   background-color: blue
+  opacity: .8
+  bottom: 400px
+  margin: 0 200px
+
+// .frontlinks a
+//   margin: auto
+
 
 .front
   height: 855px
   width: auto
-  background-color: blue
+  position: relative
+  top: 96px
   background: url("../assets/imgs/outback.JPG") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
-  // -o-background-size: cover
+  z-index: 0
+  //-o-background-size: cover
