--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,6 +16,7 @@ body {
   justify-content: flex-end;
   flex-direction: row;
   color: white;
+  z-index: 1;
 
 }
 
@@ -30,6 +31,7 @@ body {
   justify-content: center;
   background-color: white;
   padding: auto;
+  z-index: 1
 }
 
 .itemscon {
@@ -67,7 +69,7 @@ body {
 }
 .items {
   margin: 0;
-  height: auto;
+  height: 25px;
   width: 150px;
   font-size: 12px;
   display: inline-block;
