--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,8 +1,8 @@
 <div class="front">
   <div class="frontlinks">
-    <a>2017 IMPREZA</a>
-    <a>SPECIAL OFFERS</a>
-    <a>AWARDS</a>
+    <a><h1>2017 IMPREZA</h1></a>
+    <a><h1>SPECIAL OFFERS</h1></a>
+    <a><h1>AWARDS</h1></a>
   </div>
 </div>
 <div class="cars">
@@ -28,7 +28,7 @@
 </div>
 
 <div class="content">
-  <div class="fma3"></div>
+  <div id="left" class="fma3"></div>
   <div class="fma3"></div>
   <div class="fma3"></div>
 
