--- a/public/views/main.html
+++ b/public/views/main.html
@@ -24,16 +24,22 @@
 </div>
 
 <div class="promise">
-
+<div class="love">BLAH BLAH</div>
+<div class="tslp">
+  <h1>THE SUBARU LOVE PROMISE</h1>
+  <h3>Subaru and its retailers believe in making the world a better place and the Subaru Love Promise is our vision<br>
+    of respecting all people. This is our promise to show love and respect to our customers and to work to make<br>
+     a positive impact in the world.
+     <button class="learn">LEARN MORE</button>
+   </h3>
+</div>
 </div>
 
 <div class="content">
   <div id="left" class="fma3"></div>
-  <div class="fma3"></div>
-  <div class="fma3"></div>
+  <div id="mid" class="fma3"></div>
+  <div id="right" class="fma3"></div>
 
-  <div class="fma2"></div>
-  <div class="fma2"></div>
+  <div id="lef" class="fma2"></div>
+  <div id="rig"class="fma2"></div>
 </div>
-
-<div class="backtotop"></div>
