--- a/public/views/main.html
+++ b/public/views/main.html
@@ -17,21 +17,21 @@
 
 </div>
 <div class="tools">
-  <div class="tool"></div>
-  <div class="tool"></div>
-  <div class="tool"></div>
-  <div class="tool"></div>
+  <div class="tool"><img class="toolicon" src="./assets/imgs/nut.PNG"><b>BUILD YOUR OWN</b></div>
+  <div class="tool"><img class="toolicon" src="./assets/imgs/dollar.PNG"><b>SPECIAL OFFERS</b></div>
+  <div class="tool"><img class="toolicon" src="./assets/imgs/caricon.PNG"><b>LOCAL INVENTORY</b></div>
+  <div class="tool"><img class="toolicon" src="./assets/imgs/dollarbubble.PNG"><b>GET A LOCAL PRICE</b></div>
 </div>
 
 <div class="promise">
-<div class="love">BLAH BLAH</div>
+<div class="love"></div>
 <div class="tslp">
   <h1>THE SUBARU LOVE PROMISE</h1>
-  <h3>Subaru and its retailers believe in making the world a better place and the Subaru Love Promise is our vision<br>
-    of respecting all people. This is our promise to show love and respect to our customers and to work to make<br>
+  <h3>Subaru and its retailers believe in making the world a better place and the Subaru Love Promise is our vision
+    of respecting all people. This is our promise to show love and respect to our customers and to work to make
      a positive impact in the world.
-     <button class="learn">LEARN MORE</button>
    </h3>
+   <button class="learn">LEARN MORE</button>
 </div>
 </div>
 
