--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -43,7 +43,7 @@
 .vehicle
   width: 239px
   height: 69px
-  border: solid 1px black
+
 
 .topbuttons
   background-color: white
@@ -74,31 +74,51 @@
 .tools
   height: 425px
   width: 100%
-  background-color: green
+  background-color: white
   position: relative
+  display: flex
+  flex-flow: row
+  justify-content: center
+.tool
+  margin: auto
+  width: 400px
+  text-align: center
+  display: flex
+  flex-direction: column
+  font-size: 18px
+  font-family: sans-serif
+
+.toolicon
+  margin: auto
+  width: 76px
 
 .promise
-  height: 714px
   width: 100%
   color: white
   background-color: #0FA4DC
+  display: flex
+  flex-direction: row
+  align-items: center
+  padding-top: 6.3%
+  padding-bottom: 6.3%
 
 
 .love
-  height: 435px
-  width: 435px
-  position: absolute
+  height: 22vw
+  width: 22vw
+  position: relative
+  margin: auto
   background: url("../assets/imgs/lovepromise.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
 
 .tslp
+  height: 20vw
+  width: 40vw
   position: relative
-  margin: 0
-.tslp
-  h1
-    margin: 0
+  padding: 0 6%
+  text-align: center
 
 
 .learn
@@ -115,48 +135,52 @@
 
 .content
   width: 100%
-  height: 1020px
-  background-color: blue
-  display: flex
-  flex-wrap: wrap
+  height: 50vw
+  margin: 0
 
+
+.fma3
+  height: 25vw
+  display: inline-block
+  margin: -2px
+  width: 33.3%
+
+
+.fma2
+    height: 25vw
+    width: 50%
+    display: inline-block
+    margin: -2px
+    margin-top: -2px
 
 #left
-  height: 25vw
-  width: 33%
   background: url("../assets/imgs/MY18_OBK_HP_FMA.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
 
 #mid
-  height: 25vw
-  width: 33%
+
   background: url("../assets/imgs/MY18_WRX_HP_FMA.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
 
 #right
-  height: 25vw
-  width: 33%
+
   background: url("../assets/imgs/Homepage_FMA_Spring_Service.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
 
 #lef
-  height: 25vw
-  width: 49%
-  background: url("../assets/imgs/Homepage_FMA_Spring_Service.jpg") no-repeat center center
+  background: url("../assets/imgs/owner.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
 
 #rig
-  height: 25vw
-  width: 49%
-  background: url("../assets/imgs/lovepromise.jpg") no-repeat center center
+  background: url("../assets/imgs/desk.jpg") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
@@ -166,6 +190,7 @@
   width: 100%
   padding: 49px 0 53px 0
   text-align: center
+  background-color: #EFEFEF
 
 .textwrapper
   width: 1440px
@@ -175,9 +200,10 @@
 .topscroller
   height: 70px
   width: 119px
-  border: 1px solid black
+  position: relative
   bottom: 0
   margin: 0 auto
+  color: #0FA4DC
 
 .footer
   height: 603px
