--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -13,6 +13,20 @@
   color: white
   z-index: 1
 
+.items
+  height: 25px
+  width: 150px
+  font-size: 16px
+  font-family: sans-serif
+  display: inline-block
+  text-align: center
+  background-color: white
+  border-top: black
+
+.items:hover
+  border-bottom: black
+
+
 
 
 .links
