--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -26,18 +26,31 @@ body {
   position: relative;
   display: flex;
   justify-content: flex-end;
-  height: 30px;
+  height: 20px;
   width: 550px;
   float: right;
+  bottom: -5px;
  }
 
 .topitems {
-  height: 30px;
+  height: 20px;
   width: 115px;
   margin: 0 5px;
   position: relative;
   display: inline-block;
   text-align: center;
+  bottom: 0;
+
+}
+
+.topitems:hover {
+  height: 20px;
+  width: 115px;
+  margin: 0 5px;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  border-bottom: 3px white solid
 }
 
 .subaruhome {
@@ -58,18 +71,8 @@ body {
   bottom: -30px;
 }
 
-.items {
-  margin: 0;
-  height: 25px;
-  width: 150px;
-  font-size: 16px;
-  font-family: sans-serif;
-  display: inline-block;
-  text-align: center;
-  background-color: white;
-  border: none;
-  bottom: 5;
-}
+
+
 
 .sideitems {
   height: 30px;
