--- a/public/views/main.html
+++ b/public/views/main.html
@@ -18,7 +18,7 @@
 </div>
 <div class="tools">
 
-  <div class="tool"><img class="toolicon" src="./assets/imgs/nut.PNG"><b>BUILD YOUR OWN{{cars}}</b></div>
+  <div class="tool"><img class="toolicon" src="./assets/imgs/nut.PNG"><b>BUILD YOUR OWN</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/dollar.PNG"><b>SPECIAL OFFERS</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/caricon.PNG"><b>LOCAL INVENTORY</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/dollarbubble.PNG"><b>GET A LOCAL PRICE</b></div>
