--- a/public/views/main.html
+++ b/public/views/main.html
@@ -27,7 +27,7 @@
 <div class="promise">
 <div class="love"></div>
 <div class="tslp">
-  <h1>THE SUBARU LOVE PROMISE {{cars}}</h1>
+  <h1>THE SUBARU LOVE PROMISE</h1>
   <h3>Subaru and its retailers believe in making the world a better place and the Subaru Love Promise is our vision
     of respecting all people. This is our promise to show love and respect to our customers and to work to make
      a positive impact in the world.
