--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -241,10 +241,16 @@ p
 .icon
   height: 40px
   width: 77px
+  position: absolute
+  display: grid
+  right: 0
+  background-color: inherit
 
 .vmodel
   width: 114px
   height: 20px
+  font-size: 13px
+  font-weight: bold
 
 .price
   width: 114px
