--- a/public/views/build&price.html
+++ b/public/views/build&price.html
@@ -2,7 +2,7 @@
 <h1>Build & Price</h1>
 <h2>YOUR SAVED SUBARU</h2>
 </div>
-
+<div class="buildbody">
 <div class="choose">
   <h3>Choose a Subaru to Build</h3>
   <h1>CURRENT YEAR</h1><h1>PREVIOUS YEAR</h1>
@@ -10,10 +10,10 @@
 
 <div class="legacy">
   <div class="subinfo">{{car.year}}{{car.model}}{{car.price}}{{car.hmpg}}{{car.cmpg}}</div>
+<h1>Symmetrical All-Wheel Drive</h1>
 <h1></h1>
 <h1></h1>
-<h1></h1>
-<h1></h1>
+<h1>Available SUBARU STARLINK™ Safety and Security</h1>
 <div></div>
 <div></div>
 <div></div>
@@ -28,3 +28,4 @@
 <div class="WRX"></div>
 
 <div class="BRZ"></div>
+</div>
