--- a/public/views/build&price.html
+++ b/public/views/build&price.html
@@ -5,18 +5,27 @@
 <div class="buildbody">
 <div class="choose">
   <h3>Choose a Subaru to Build</h3>
+  <div class="yearselector">
   <h1>CURRENT YEAR</h1><h1>PREVIOUS YEAR</h1>
 </div>
+</div>
 
-<div class="legacy">
-  <div class="subinfo">{{car.year}}{{car.model}}{{car.price}}{{car.hmpg}}{{car.cmpg}}</div>
+<div class="modelcon" ng-repeat="car in cars" >
+  <div class="modeldetcon">
+  <div class="modelimg"><img src="../assets/imgs/legacyout.jpg">
+    <div>EXTERIOR</div>
+    <div>INTERIOR</div>
+  </div>
+  <div class="subinfo"><h3>{{car.year}}{{car.model}}{{car.price}}{{car.hmpg}}{{car.cmpg}}</h3></div>
 <h1>Symmetrical All-Wheel Drive</h1>
-<h1></h1>
-<h1></h1>
+<h1>SUBARU STARLINK™ Multimedia</h1>
+<h1>Vehicle Dynamics Control with Active Torque Vectoring</h1>
 <h1>Available SUBARU STARLINK™ Safety and Security</h1>
 <div></div>
 <div></div>
 <div></div>
+</div>
+</div>
 </div>
 
 <div class="Outback"></div>
