--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -274,16 +274,50 @@ p
   transition: background-color 600ms ease-out
   cursor: pointer
 
-.buildbody
-  height: 600px
+.buildheader
+  height: 70px
   width: 100%
+  background-color: #232323
+  position: relative
+  top: 98px
 
-.legacy
-  height: 400px
-  width: 400px
+
+.buildbody
+  width: 100%
+  height: 2800px
+
+
+.choose
+  position: relative
+  margin: 0 auto
+  height: 115px
+  width: 600px
+  margin-top: 98px
+  font-style: 14px
+  color: #595959
+  font-family: sans-serif
+  display: block
+
+.yearselector
+  height: 25px
+  width: auto
+  margin: 0 auto
+
+
+.modelcon
+  height: 362px
+  width: 960px
   position: relative
   margin: auto
-  background: blue
+  margin-bottom: 40px
+  box-shadow: 0 18px 25px 0 rgba(0,0,0,0.10)
+
+.modeldetcon
+  display: flex
+  flex-direction: row
+
+.modelimg
+  display: inline-block
 
 .vehicle
   width: 238px
@@ -369,6 +403,7 @@ p
   display: flex
   flex-flow: row
   justify-content: center
+  
 .tool
   margin: auto
   width: 400px
