--- a/public/views/build&price.html
+++ b/public/views/build&price.html
@@ -12,7 +12,7 @@
 
 <div class="modelcon" ng-repeat="car in cars" >
   <div class="modeldetcon">
-  <div class="modelimg"><img src="../assets/imgs/legacyout.jpg">
+  <div class="modelimg"><img src="{{car.buildimg2}}">
     <div>EXTERIOR</div>
     <div>INTERIOR</div>
   </div>
