--- a/public/views/cars.html
+++ b/public/views/cars.html
@@ -1,3 +1,5 @@
-<div class="carheader">
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+<div class="carheader" style="color: white;">
+  <h1>
+aaaaaaaaaaaaaaa{{cart}}aaaaaaaaaaaaaaaaaaa
+  </h1>
 </div>
