--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -24,7 +24,11 @@ body
   // -webkit-transition: top 300ms ease-out
   // -moz-transition: top 300ms ease-out
   // transition: top 300ms ease-out
-
+.arrow
+	background: url('../assets/imgs/siteimgs.PNG') no-repeat -99px -450px
+	width: 19px
+	height: 10px
+  border: none
 
 .itemscon
   position: relative
@@ -47,7 +51,7 @@ body
 .modelimg
   height: 302px
   width: 482px
-  background: url("../assets/imgs/legacyout.jpg") no-repeat
+
 
 .subaruhome
   margin: 11px 0 0 23px
@@ -288,6 +292,28 @@ p
   color: white
   opacity: 1
 
+.bottomcontent
+  position: relative
+  height: 50px
+  width: 100%
+  background:
+  display: flex
+  flex-direction: row
+  color: #0099FF
+  bottom: 0
+  border-top: 2px #EFEFEF solid
+  font-weight: bold
+  font-family: sans-serif
+
+
+.modelbutton
+  width: 164px
+  text-align: center
+  position: relative
+  margin: 0 auto
+
+
+
 .yearselector
   font-size: .8125rem
 
@@ -317,7 +343,9 @@ p
   height: 302px
   width: 960px
   position: relative
-  margin: auto
+  display: flex
+  flex-direction: row
+  margin: 40px auto
   margin-bottom: 40px
   box-shadow: 0 18px 25px 0 rgba(0,0,0,0.10)
 
@@ -332,7 +360,28 @@ p
   flex-direction: row
 
 .modelimg
-  display: inline-block
+  display: flex
+  flex-direction: row
+
+.views
+  position: absolute
+  bottom: 0
+  display: flex
+  flex-direction: row
+
+.viewselect
+  height: 25px
+  width: 238px
+  margin: 0 auto
+  position: relative
+  color: white
+  display: flex
+  flex-direction: row
+  justify-content: center
+  // font-size: .9rem
+  font-weight: bold
+  font-family: sans-serif
+
 
 .vehicle
   width: 238px
