--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,20 +4,17 @@
     <a><h1>SPECIAL OFFERS</h1></a>
     <a><h1>AWARDS</h1></a>
   </div>
+
 </div>
 <div class="cars">
-
-  <div class="car"></div>
-  <div class="car"></div>
-  <div class="car"></div>
-  <div class="car"></div>
-  <div class="car"></div>
-  <div class="car"></div>
-  <div class="car"></div>
-
+  <div class="car" ng-repeat= "car in cars">
+    {{car.model}}
+    <img class="carbut" src="{{car.icon}}">
+    {{car.price}}
+  </div>
 </div>
-<div class="tools">
 
+<div class="tools">
   <div class="tool"><img class="toolicon" src="./assets/imgs/nut.PNG"><b>BUILD YOUR OWN</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/dollar.PNG"><b>SPECIAL OFFERS</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/caricon.PNG"><b>LOCAL INVENTORY</b></div>
