--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -31,7 +31,7 @@
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
       <div class="panelmenubut">Compare</div>
-      <div class="panelmenubut">Build & Price</div>
+      <div class="panelmenubut" ui-sref="build" >Build & Price</div>
 
 
   </div>
