--- a/public/views/build&price.html
+++ b/public/views/build&price.html
@@ -31,8 +31,8 @@
     </h1>
     <div class="bottomcontent">
       <div class="modelbutton" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
-      <div class="modelbutton" ui-sref="compare">COMPARE</div>
-      <div class="modelbutton" id="build" ui-sref="build" style="border-left: 2px #EFEFEF solid;color: white; background-color: #0099FF;" ng-click="build()">BUILD</div>
+      <div class="modelbutton">COMPARE</div>
+      <div class="modelbutton" id="build" ui-sref="build" ng-click="build()">BUILD</div>
     </div>
   </div>
 </div>
