--- a/public/views/cars.html
+++ b/public/views/cars.html
@@ -1,5 +1,13 @@
 <div class="carheader" style="color: white;">
   <h1>
-aaaaaaaaaaaaaaa{{cart}}aaaaaaaaaaaaaaaaaaa
+    <ul>
+      <ul>{{cars[1].model}}</ul>
+      <ul>{{cars[1].year}}</ul>
+      <ul>{{cars[1].description}}</ul>
+      <ul>{{cars[1].feature1}}</ul>
+      <ul>{{cars[1].feature2}}</ul>
+      <ul>{{cars[1].feature3}}</ul>
+      <ul>{{cars[1].feature4}}</ul>
+    </ul>
   </h1>
 </div>
