--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -192,23 +192,15 @@ p
 .items
   height: 25px
   width: 170px
-  font-size: 16px
-  font-family: sans-serif
   display: inline-block
   text-align: center
   background-color: white
   border: white
 
-.items:hover
- border-bottom: 3px solid #333333
- cursor: pointer
-
 .links
   height: 200px
   width: 1130px
   background-color: white
-
-
 
 
 .vehicledropdown
@@ -347,6 +339,13 @@ p
   width: 100%
   height: 2620px
 
+#build
+  border-left: 2px #EFEFEF solid
+  color: white
+  background-color: #0099FF
+
+#build:hover
+  background-color: #232323
 
 .choose
   position: relative
