--- a/public/views/cars.html
+++ b/public/views/cars.html
@@ -1,13 +1,13 @@
 <div class="carheader" style="color: white;">
   <h1>
     <ul>
-      <ul>{{cars[1].model}}</ul>
-      <ul>{{cars[1].year}}</ul>
-      <ul>{{cars[1].description}}</ul>
-      <ul>{{cars[1].feature1}}</ul>
-      <ul>{{cars[1].feature2}}</ul>
-      <ul>{{cars[1].feature3}}</ul>
-      <ul>{{cars[1].feature4}}</ul>
+      <ul>{{car.model}}</ul>
+      <ul>{{car.year}}</ul>
+      <ul>{{car.description}}</ul>
+      <ul>{{car.feature1}}</ul>
+      <ul>{{car.feature2}}</ul>
+      <ul>{{car.feature3}}</ul>
+      <ul>{{car.feature4}}</ul>
     </ul>
   </h1>
 </div>
