--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -7,23 +7,29 @@ body
   display: grid
 
 
-
 .white
   position: relative
   margin: 0
   top: 38px
-  border-bottom: 1px black
+  border-bottom: 1px #CCCCCC
   height: 58px
   width: 100%
   color: black
   position: fixed
   display: flex
   justify-content: center
-  background-color: white
+  background-color: #FAFAFA
   z-index: 1
   // -webkit-transition: top 300ms ease-out
   // -moz-transition: top 300ms ease-out
   // transition: top 300ms ease-out
+// #showvehicles
+//   display: inline-block
+// #showvehicles h1
+//   margin: none
+//   width: auto
+//   display: inline-block
+
 .arrow
 	background: url('../assets/imgs/siteimgs.PNG') no-repeat -99px -450px
 	width: 19px
@@ -70,10 +76,9 @@ body
   position: relative
   display: flex
   flex-direction: row
-  height: 25px
+  height: 100%
   width: 500px
   margin: 0 auto
-  margin-top: 30px
 
 .sideitems
   height: 30px
@@ -87,6 +92,7 @@ body
   height: 30px
   width: 150px
   position: relative
+  margin: auto 0
   display: flex
   flex-direction: row
 
@@ -190,12 +196,15 @@ p
   z-index: 1
 
 .items
-  height: 25px
+  height: 100%
   width: 170px
   display: inline-block
   text-align: center
   background-color: white
-  border: white
+
+.items:hover
+  cursor: pointer
+  border-bottom: 3px solid #333333;
 
 .links
   height: 200px
@@ -212,7 +221,7 @@ p
   height: 568px
   background-color: white
   margin: 0
-  border: .5px solid black
+  border: .5px solid #CCCCCC
 
 // .mainpanel
 //   height: 499px
@@ -301,12 +310,12 @@ p
   display: flex
   margin: 0 auto
   top: -85px
-  z-index: 1
+  z-index: 10
   flex-direction: row
   box-shadow: 0 18px 25px 0 rgba(0, 0, 0, 0.1)
 
 .car
-  height: 70px
+  height: 170px
   width: 145px
   margin: auto
   text-align: center
@@ -315,13 +324,29 @@ p
   color: #20609F
   text-decoration: none
 
-.car:hover
+.car h2
+  font-size: 14px
+  margin: 0 auto
+  width: 80px
+
+
+.car h2:hover
+  width: 100px
   color: #414141
+  margin: 0 auto
+
+.car h3
+  font-size: 14px
+  color: #B8B8B8
+  display: inline-block
+  margin: 0
+
+.car:hover
   cursor: pointer
 
 .carbut
-  height: 100%
-  width: 100%
+  height: 70px
+  width: 145px
 
 .modelbutton
   width: 164px
@@ -415,7 +440,7 @@ p
   position: relative
   display: flex
   flex-direction: column
-  border: .5px black solid
+  border: .5px #CCCCCC solid
   border-top: none
   border-left: none
   background-color: #EFEFEF
@@ -523,19 +548,21 @@ p
   //-o-background-size: cover
 
 .tools
-  height: 425px
+  height: 310px
   width: 100%
   background-color: white
   position: relative
   display: flex
   flex-flow: row
   justify-content: center
-  z-index: 0
   text-align: center
+  padding-top: 116px
   border: 1px black solid
+  top: -170px
 
 .tools h1
- height: 20px
+ height: 42px
+ width: 100%
  position: absolute
  font-family: Helvetica
  color: #A2A2A2
@@ -551,6 +578,10 @@ p
   font-size: 18px
   font-family: sans-serif
   cursor: pointer
+  padding-top: 40px
+
+.tool b
+  margin: 18px
 
 .toolicon
   margin: auto
