--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -8,15 +8,11 @@
 }
 
 .items h1 {
-  width: 90px;
+  width: auto;
   font-size: 16px;
   font-family: sans-serif;
 }
 
-.items h1:hover {
-border-bottom: 3px solid #333333;
-cursor: pointer;
-}
 
 .choose h3 {
   height: 23px;
@@ -77,6 +73,5 @@ cursor: pointer;
 }
 
 .tool:hover {
-  cursor: grab;
   color: #0FA4DC;
 }
