--- a/public/views/vehicles.html
+++ b/public/views/vehicles.html
@@ -1,14 +1,16 @@
+<body> <img class="vimg">
 <div class="carheader" style="color: #FAFAFA;">
   <h1>
-    <ul>{{vehicle}}</ul>
+    <ul>{{vehicle.model}}</ul>
     <ul>
-      <ul>{{}}</ul>
-      <ul>{{}}</ul>
-      <ul>{{description}}</ul>
+      <ul>{{vehicle.year}}</ul>
+      <ul>{{vehicle.price}}</ul>
+      <ul>{{vehicle.description}}</ul>
       <ul>{{vehicle.feature1}}</ul>
-      <ul>{{car.feature2}}</ul>
-      <ul>{{car.feature3}}</ul>
-      <ul>{{car.feature4}}</ul>
+      <ul>{{vehicle.feature2}}</ul>
+      <ul>{{vehicle.feature3}}</ul>
+      <ul>{{vehicle.feature4}}</ul>
     </ul>
   </h1>
 </div>
+</body>
