--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,7 +8,7 @@
 
 </div>
 <div class="cars">
-  <div class="car" ng-repeat= "car in cars" ui-sref="vehicles({vehicle: car.id})">
+  <div class="car" ng-repeat= "car in cars" ui-sref="vehicles({vehicle: car._id})">
     <h2>{{car.model}}</h2>
     <img class="carbut" src="{{car.icon}}">
     <div>
