--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -13,20 +13,21 @@
     <div class="vehicleinfo">
       <div class="model">
         <div class="modelyear">
-          <h3>{{cars[i].year}}
+          <h3>{{cars[0].year}}
           {{cars[0].model}}</h3>
         </div>
         <div class="modelinfo">
-          <h6>starting at</h6>
-          <h2>{{cars[0].price}}</h2>
-          msrp
-        Up to
+          <h5>starting at<br> {{cars[0].price}} msrp</h5>
+
+          <h4>
+        Up to<br>
           {{cars[0].hmpg}}/
           {{cars[0].cmpg}}
           HwyCity
+        </h4>
         </div>
 
-    </div>
+      </div>
 
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
