--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -11,10 +11,10 @@ body
   position: relative
   margin: 0
   top: 38px
-  border-bottom: 1px #CCCCCC
+  border-bottom: 1px solid #CCCCCC
   height: 58px
   width: 100%
-  color: black
+  color: #232323
   position: fixed
   display: flex
   justify-content: center
@@ -485,32 +485,129 @@ p
   height: 50px
   margin: 0
 
-.modelinfo h6
+.modelyear
+  top: 25px
   position: relative
-  top: 30px
-  margin: 0
 
-.modelinfo h2
+.modelinfo
+  height: 60px
+  width: 325px
+  margin: auto
+  top: 30px
   position: relative
-  top: 30px
-  margin: 0
+  display: flex
+  flex-direction: row
+  // border: 1px solid white
 
+.modelinfo h5
+  height: 30px
+  width: 100px
+  position: relative
+  margin: 0 auto
+  // border: 1px dotted white
 
+.modelinfo h4
+  height: 30px
+  width: 150px
+  position: relative
+  margin: 0 auto
+  // border: 1px dotted white
 
 .topbuttons
   background-color: #FAFAFA
   border: none
 
 .carheader
+  background-color: white
+  position: absolute
+  display: flex
+  flex-direction: row
+  top: 95px
+  height: 70px
+  width: 100%
+  color: black
+
+
+.carheader h4
+  position: relative
+  display: inline-block
+  margin: auto 100px
+  color: black
+  background-color: white
+
+.carheaderitems
+  height: 67px
+  position: absolute
+  display: inline-block
+  right: 200px
+
+.caritem:hover
+  border-bottom: 3px solid #0099FF
+
+#overview
+  border-bottom: 3px solid #0099FF
+  background-color:  #FAFAFA
+
+.carheaderitems .caritem
+  height: 100%
+  width: 100px
+  border-left: 1px solid black
+  position: relative
+  display: inline-block
+  text-align: center
+  font-family: sans-serif
+  margin: auto
+
+#shopcar
+  height: 100%
+  width: 200px
+  background-color: #0099FF
+  font-family: sans-serif
+  font-weight: bold
+  text-align: center
+  vertical-align: middle
+  position: absolute
+  right: 0
+
+#shopcar h4
+  color: white
+  position: relative
+  margin: auto
+  background-color: inherit
+
+.cartmain
+  width: 100%
+  height: 100vh
+  background: url("../assets/imgs/background.jpg") no-repeat center center
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  background-size: cover
+
+.title
+  height: 70px
+  width: 100%
+  position: absolute
+  top: 94px
+  background-color: #222
+  color: white
+  opacity: .9
+
+.title h1
+  opacity: none
+
+.carmain
     height: 855px
     width: 100%
     position: relative
-    top: 60px
+    top: 115px
     background-color: #FAFAFA
     background: url("../assets/imgs/brz.JPG") no-repeat center center
     -webkit-background-size: cover
     -moz-background-size: cover
     background-size: cover
+
+.carmain h1
+  margin: 0
 
 .front
   height: 855px
