--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -32,7 +32,7 @@
     <div class="bottomcontent">
       <div class="modelbutton" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
       <div class="modelbutton">COMPARE</div>
-      <div class="modelbutton" id="build" ui-sref="build" ng-click="build()">BUILD</div>
+      <div class="modelbutton" id="build" ui-sref="cart({vehicle: car._id})">BUILD</div>
     </div>
   </div>
 </div>
