--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -1,7 +1,11 @@
-
-
-
+<div class="title">
+  <div><h1>Build & Price {{vehicle.model}}</h1></div>
+</div>
+<body class="cartmain">
+  <div class="cartmain">
     <div class="update" type="text" name="update" ng-model="item">
 
 
   <button class="change" ng-click="changeData( { id : data.text_id , newtask: item }, $index )"> Change Task</button>
+    </div>
+</body>
