--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -595,6 +595,15 @@ p
 .title h1
   opacity: none
 
+.foot
+  height: 70px
+  width: 100%
+  position: absolute
+  background-color: #222
+  opacity: .9
+  bottom: 0
+  color: white
+
 .carmain
     height: 855px
     width: 100%
